@@ -146,6 +146,7 @@ Release 0.19.0 - Unreleased
    HBASE-1020  Regionserver OOME handler should dump vital stats
    HBASE-1018  Regionservers should report detailed health to master
    HBASE-1034  Remove useless TestToString unit test
+   HBASE-1030  Bit of polish on HBASE-1018
 
   NEW FEATURES
    HBASE-875   Use MurmurHash instead of JenkinsHash [in bloomfilters]
